--- a/papers.bib
+++ b/papers.bib
@@ -548,3 +548,33 @@ month={September},
 year={1991},
 volume={34},
 number={9},}
+@article{13020386, author = {Sylvain Koos and Antoine Cully and Jean{-}Baptiste Mouret}, title = {Fast Damage Recovery in Robotics with the T-Resilience Algorithm}, journal = {CoRR}, year = {2013}, volume = {abs/1302.0386}, url = {http://arxiv.org/abs/1302.0386}, timestamp = {Sat, 15 Nov 2014 16:32:05 +0100}, biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1302-0386}, bibsource = {dblp computer science bibliography, http://dblp.org} }
+@INPROCEEDINGS{4711433, 
+author={Orchard, M. and Kacprzynski, G. and Goebel, K. and Saha, B. and Vachtsevanos, G.}, 
+booktitle={Prognostics and Health Management, 2008. PHM 2008. International Conference on}, 
+title={Advances in uncertainty representation and management for particle filtering applied to prognostics}, 
+year={2008}, 
+month={Oct}, 
+pages={1-6}, 
+keywords={Bayes methods;aerospace computing;aerospace materials;condition monitoring;failure analysis;feedback;particle filtering (numerical methods);uncertain systems;Bayesian estimation;critical aircraft component;failure prognosis;fatigue-driven fault;feedback correction loop;noise distributions;nonlinear prediction;particle filtering;prognostics;regularization algorithms;resampling techniques;rescaled Epanechnikov kernel;uncertainty management;uncertainty representation;Bayesian methods;Feedback loop;Filtering;Kernel;NASA;Neural networks;Predictive models;Space technology;State estimation;Uncertainty;Failure prognosis;particle filtering;uncertainty management;uncertainty representation}, 
+doi={10.1109/PHM.2008.4711433},}
+@inproceedings{orchard2005, title={A particle filtering framework for failure prognosis}, author={Orchard, Marcos and Wu, Biqing and Vachtsevanos, George}, booktitle={World Tribology Congress III}, pages={883--884}, year={2005}, organization={American Society of Mechanical Engineers} }
+@INPROCEEDINGS{4711448, 
+author={Liang Tang and Kacprzynski, G.J. and Goebel, K. and Saxena, A. and Saha, B. and Vachtsevanos, G.}, 
+booktitle={Prognostics and Health Management, 2008. PHM 2008. International Conference on}, 
+title={Prognostics-enhanced Automated Contingency Management for advanced autonomous systems}, 
+year={2008}, 
+month={Oct}, 
+pages={1-9}, 
+keywords={aerospace control;condition monitoring;mobile robots;remotely operated vehicles;advanced autonomous systems;component level control reconfiguration;fault mitigation;fidelity unmanned aerial vehicle simulation;flight control actuators;hierarchical ACM+P architecture;prognostics-enhanced automated contingency management;system level control reconfiguration;Aerospace control;Aerospace simulation;Automatic control;Contingency management;Control systems;Fault diagnosis;Level control;Military aircraft;State estimation;Unmanned aerial vehicles;Automated contingency management;Prognostics and Health Management;autonomous system;control reconfiguration}, 
+doi={10.1109/PHM.2008.4711448},}
+@INPROCEEDINGS{6137995, 
+author={Liang Tang and Bin Zhang and DeCastro, J. and Hettler, E.}, 
+booktitle={Control and Automation (ICCA), 2011 9th IEEE International Conference on}, 
+title={An integrated health and contingency management case study on an autonomous ground robot}, 
+year={2011}, 
+month={Dec}, 
+pages={584-589}, 
+keywords={fault diagnosis;mobile robots;vehicles;HyDE-based diagnosis reasoner;autonomous ground robot;autonomous robotic vehicles;contingency management system;fault detection;fault progression;faults isolation;health management information;mission reconfiguration;onboard health system;particle filtering-based prognosis server;prognostics-enhanced mission planner;real-time prognostics;robot control;software module;Batteries;Computers;Robot sensing systems;Tires;Vehicles}, 
+doi={10.1109/ICCA.2011.6137995}, 
+ISSN={1948-3449},}
