making citation notes and bib entries

--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -18,3 +18,45 @@ url = "http://dx.doi.org/10.1214/09-STS285",
 volume = "24",
 year = "2009"
 }
+@article{el-arini2011,
+    author = "El-Arini, Khalid and Guestrin, Carlos",
+    title = "Beyond Keyword Search: Discovering Relevant Scientific Literature",
+    booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+    pages={439--447},
+    year={2011},
+    organization={ACM}
+}
+@article{bro2003,
+    title={A new efficient method for determining the number of components in PARAFAC models},
+    author={Bro, Rasmus and Kiers, Henk AL},
+    journal={Journal of chemometrics},
+    volume={17},
+    number={5},
+    pages={274--286},
+    year={2003},
+    publisher={Wiley Online Library}
+}
+@article{harshman1970,
+    title={Foundations of the PARAFAC procedure: Models and conditions for an" explanatory" multi-modal factor analysis},
+    author={Harshman, Richard A},
+    year={1970},
+    publisher={University of California at Los Angeles Los Angeles, CA}
+}
+@inproceedings{dietz2007,
+    title={Unsupervised prediction of citation influences},
+    author={Dietz, Laura and Bickel, Steffen and Scheffer, Tobias},
+    booktitle={Proceedings of the 24th international conference on Machine learning},
+    pages={233--240},
+    year={2007},
+    organization={ACM}
+}
+@article{blei2003,
+    title={Latent dirichlet allocation},
+    author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+    journal={Journal of machine Learning research},
+    volume={3},
+    number={Jan},
+    pages={993--1022},
+    year={2003}
+}
+
